src/test/ui/impl-header-lifetime-elision/dyn-trait.stderr
error[E0759]: cannot infer an appropriate lifetime
  --> $DIR/dyn-trait.rs:20:16
   |
LL | fn with_dyn_debug_static<'a>(x: Box<dyn Debug + 'a>) {
   |                                 ------------------- this data with lifetime `'a`...
LL |     static_val(x);
   |                ^ ...is captured here...
   |
note: ...and is required to live as long as `'static` here
  --> $DIR/dyn-trait.rs:20:5
   |
LL |     static_val(x);
   |     ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0759`.
